--- a/source/scss/blocks/intro.scss
+++ b/source/scss/blocks/intro.scss
@@ -93,7 +93,9 @@
   text-transform: uppercase;
   font-size: 2.4rem;
   line-height: 1.27;
-
+  opacity: 0;
+  transform: translateY(25%);
+  transition: opacity 1s ease, transform 0.6s ease;
   @media (min-width: $stop-scaling) {
     width: 509px;
     font-size: 24px;
