--- a/source/scss/blocks/slider.scss
+++ b/source/scss/blocks/slider.scss
@@ -63,6 +63,21 @@
       }
     }
   }
+
+  &.swiper-slide-active{
+    .slider__item-text {
+      opacity: 1;
+      transform: translateX(0);
+      transition: opacity 1s linear, transform 0.5s linear;
+    }
+  }
+  &.swiper-slide-next{
+    .slider__item-text {
+      opacity: 1;
+      transform: translateX(0);
+      transition: opacity 1s linear, transform 0.5s linear;
+    }
+  }
 }
 
 .slider__item-title {
@@ -96,6 +111,8 @@
   max-width: 34rem;
   font-size: 1.8rem;
   line-height: 2rem;
+  opacity: 0;
+  transform: translateX(25%);
 
   @media (min-width: $stop-scaling) {
     margin-top: 36px;
