--- a/source/scss/blocks/social-block.scss
+++ b/source/scss/blocks/social-block.scss
@@ -5,6 +5,21 @@
     .social-block__list {
       opacity: 1;
       pointer-events: auto;
+      &>li{
+        opacity: 1;
+        transform: translateY(0);
+        &:nth-child(1) {
+          transition-delay: 0.2s;
+        }
+
+        &:nth-child(2) {
+          transition-delay: 0.4s;
+        }
+
+        &:nth-child(3) {
+          transition-delay: 0.6s;
+        }
+      }
     }
   }
 }
@@ -17,6 +32,7 @@
   height: 4rem;
   color: $c-dark;
   border-radius: 50%;
+  transition: color 0.5s;
 
   @media (max-width: $tablet) and (orientation: portrait) {
     display: none;
@@ -35,6 +51,7 @@
     background-color: $c-light;
     border: 2px solid $c-light;
     z-index: -1;
+    transition: width 0.3s, height 0.3s;
   }
 
   svg {
@@ -145,6 +162,9 @@
   li {
     flex: none;
     margin-bottom: 0.5rem;
+    opacity: 0;
+    transform: translateY(10px);
+    transition: opacity 0.5s, transform 0.5s;
 
     @media (min-width: $stop-scaling) {
       margin-bottom: 5px;
@@ -152,10 +172,13 @@
 
     @media (max-width: $tablet) and (orientation: portrait) {
       margin: 0 1.25rem;
+      opacity: 1;
+      transform: translateY(0);
     }
 
     @media (max-width: $mobile) and (orientation: landscape) {
       margin: 0 1.25rem;
+      opacity: 1;
     }
   }
 }
@@ -168,6 +191,7 @@
   color: $c-light;
   border: 2px solid transparent;
   border-radius: 50%;
+  transition: color 0.5s;
 
   @media (min-width: $stop-scaling) {
     width: 40px;
